# autotag

./: .gitignore  CMakeLists.txt  README.md  Watch.cpp  Watch.h  autotag.service  config.ini  install.sh  main.cpp
.github/workflows/: codeql-analysis.yml
libs/c++utilities/: CMakeLists.txt
libs/glog-0.4.0/: CMakeLists.txt
libs/restclient-cpp-0.5.2/: CMakeLists.txt
libs/tagparser/: CMakeLists.txt
src/: TMDB.cpp  TMDB.h  Watch.cpp  Watch.h  main.cpp  movie.cpp  movie.h
src/AtomicParsley/: AP_commons.h  AP_iconv.cpp  APar_sha1.h  AtomicParsley.cpp
